--- a/examples/config/lj13_fab.yaml
+++ b/examples/config/lj13_fab.yaml
@@ -22,8 +22,8 @@ training:
   n_epoch: 14000 # approx how many iter we can do in the training time
   batch_size: 1024 # Note per device if multiple devices used.
   use_multiple_devices: true
-  eval_batch_size: 16 # Will be timez by K during eval.
-  plot_batch_size: 32
+  plot_batch_size: 1000 # We evaluate tvd with validation set on this many samples.
+  eval_batch_size: 16 # Not used
   seed: 0
   train_set_size: 1000
   test_set_size: 1000
@@ -38,6 +38,6 @@ logger:
   wandb:
     name: lj13_fab_${flow.type}
     project: fab
-    entity: flow-ais-bootstrap
+    entity: himchan00
     tags: [lj13,fab,Leucadendron]
 
