--- a/examples/config/lj13_fab.yaml
+++ b/examples/config/lj13_fab.yaml
@@ -22,7 +22,7 @@ training:
   n_epoch: 14000 # approx how many iter we can do in the training time
   batch_size: 1024 # Note per device if multiple devices used.
   use_multiple_devices: true
-  plot_batch_size: 1000 # We evaluate tvd with validation set on this many samples.
+  plot_batch_size: 1000 # We evaluate tvd using 1000 samples. n_gen = 1000 // plot_batch_size
   eval_batch_size: 16 # Not used
   seed: 0
   train_set_size: 1000
