--- a/examples/config/dw4_fab.yaml
+++ b/examples/config/dw4_fab.yaml
@@ -44,7 +44,7 @@ logger:
 #  pandas_logger:
 #    save_period: 1000 # how often to save the pandas dataframe as a csv
   wandb:
-    name: dw4_fab_${flow.type}
+    name: dw4_fab_${flow.type}_${training.seed}
     project: fab
     entity: himchan00
     tags: [dw4,fab,Leucadendron1]
